# content-comparison-tool

./: .gitignore  README.md  compare_tool.py  diff_scoring.py  html_diff.py  pyproject.toml  text_normalization.py
.github/workflows/: ci.yml
data/: test_data.json  url_a_diff.html  url_a_diff2.html  url_a_diff3.html  url_a_diff4.html  url_a_diff5.html  url_a_same.html  url_b_diff.html  url_b_diff2.html  url_b_diff3.html  url_b_diff4.html  url_b_diff5.html  url_b_same.html
tests/: test_html_diff.py
